<?xml version="1.0"?>
<package>
  <name>ensenso_camera</name>
  <version>1.0.0</version>
  <description>Driver for Ensenso stereo cameras</description>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ensenso_camera</url>
  <url type="repository">https://github.com/ensenso/ros_driver.git</url>
  <url type="bugtracker">https://github.com/ensenso/ros_driver/issues</url>

  <maintainer email="daniel.saier@ensenso.com">Daniel Saier</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>ensenso_camera_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>ensenso_camera_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
