<?xml version="1.0"?>
<package format="2">
  <name>ensenso_camera</name>
  <version>1.0.0</version>
  <description>Driver for Ensenso stereo cameras.</description>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ensenso_camera</url>
  <url type="repository">https://github.com/ensenso/ros_driver.git</url>
  <url type="bugtracker">https://github.com/ensenso/ros_driver/issues</url>

  <author>Ensenso</author>
  <maintainer email="daniel.saier@ensenso.com">Daniel Saier</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <depend>actionlib</depend>
  <depend>cv_bridge</depend>
  <depend>diagnostic_msgs</depend>
  <depend>ensenso_camera_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
