<?xml version="1.0"?>
<package>
  <name>ensenso_camera_msgs</name>
  <version>1.0.0</version>
  <description>Message definitions for Ensenso stereo cameras</description>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ensenso_camera_msgs</url>
  <url type="repository">https://github.com/ensenso/ros_driver.git</url>
  <url type="bugtracker">https://github.com/ensenso/ros_driver/issues</url>

  <maintainer email="daniel.saier@ensenso.com">Daniel Saier</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>stereo_msgs</run_depend>

  <export>
  </export>
</package>
