<?xml version="1.0"?>
<package format="2">
  <name>ensenso_camera_msgs</name>
  <version>1.0.0</version>
  <description>Message definitions for the ensenso_camera package.</description>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ensenso_camera_msgs</url>
  <url type="repository">https://github.com/ensenso/ros_driver.git</url>
  <url type="bugtracker">https://github.com/ensenso/ros_driver/issues</url>

  <author>Ensenso</author>
  <maintainer email="daniel.saier@ensenso.com">Daniel Saier</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>

  <export>
  </export>
</package>
