<?xml version="1.0"?>
<package format="2">
  <name>ensenso_camera_test</name>
  <version>1.0.0</version>
  <description>Tests for the ensenso_camera package</description>

  <license>BSD</license>

  <url type="repository">https://github.com/ensenso/ros_driver.git</url>
  <url type="bugtracker">https://github.com/ensenso/ros_driver/issues</url>

  <maintainer email="daniel.saier@ensenso.com">Daniel Saier</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <depend>ensenso_camera</depend>
  <depend>ensenso_camera_msgs</depend>
  <depend>rospy</depend>
  <depend>rostest</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>