<?xml version="1.0"?>
<package format="2">
  <name>ensenso_driver</name>
  <version>1.7.1</version>
  <description>Driver for Ensenso stereo cameras.</description>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ensenso_driver</url>
  <url type="repository">https://github.com/ensenso/ros_driver.git</url>
  <url type="bugtracker">https://github.com/ensenso/ros_driver/issues</url>

  <author>Ensenso</author>
  <maintainer email="daniel.saier@ensenso.com">Daniel Saier</maintainer>
  <maintainer email="benjamin.thiemann@ensenso.com">Benjamin Thiemann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ensenso_camera</exec_depend>
  <exec_depend>ensenso_camera_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
